<resources>
    <string name="app_name">Lanix</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This user account is invalid</string>
    <string name="error_invalid_password">Usuario y/o contraseña incorrecto</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="my_location_demo_label">My Location Demo</string>

    <string name="pin_content_desc">PIN input field</string>
    <string name="pin_label_text">PIN</string>

    <string name="take_picture">Take picture</string>
    <string name="msg_registro">Registra tus horarios de entrada y salida, así como tus horarios de comida. Selecciona el botón correspondiente para realizar el registro.</string>
    <string name="msg_hra_entrada">HORA DE ENTRADA</string>
    <string name="msg_regreso_comida">REGRESO DE COMIDA</string>
    <string name="hora_de_salida">HORA DE SALIDA</string>
    <string name="goto_icon"><![CDATA[>]]></string>
    <string name="salida_a_comer">SALIDA A COMER</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="msg_recover_pw">Hemos enviado a tu correo el código de recuperación de contraseña.</string>
    <string name="aviso_privacidad">
Aviso de Privacidad\n


Corporativo Lanix, S.A. de C.V. (en adelante “Lanix”), con domicilio en Carretera Internacional Hermosillo – Nogales, Km 8.5, colonia San Luis, C.P. 83160, Hermosillo, Sonora, México, de conformidad con la Ley Federal de Protección de Datos Personales en Posesión de los Particulares y su Reglamento (en adelante y conjuntamente como la “Legislación”) hace de su conocimiento lo siguiente:

Lanix a través de este portal www.lanix.com (en adelante “este sitio web”), da a conocer el presente aviso de privacidad con la finalidad de proteger la información personal que en su caso sea proporcionada por los visitantes a través de este sitio.



¿Para qué fines utilizaremos sus datos personales?

Los Datos Personales que proporcione a Lanix serán tratados para las siguientes finalidades necesarias:

1.     Hacer efectiva la garantía de los productos que usted haya adquirido, de conformidad con la póliza respectiva.

2.     Dar seguimiento a algún problema que haya surgido respecto a pedidos y/o entrega de productos o la prestación de los servicios contratados.

3.     Cumplir con las obligaciones derivadas de la revisión, diagnóstico y/o reparación de los productos.

4.     Proporcionar soporte técnico.

5.     Proporcionarle información para que su producto pueda ser ingresado a nuestros Centros de Soluciones.

6.     Enviarle comunicaciones necesarias en relación con los productos y/o servicios que haya adquirido.



Sus Datos Personales también podrán tratarse para cumplir con las siguientes finalidades secundarias que nos permite y facilita brindarle una mejor atención:



1.     Proporcionarle información sobre productos, servicios, promociones, concursos, certámenes u otras actividades o propuestas de interés de Lanix.

2.     Solicitarle información para efectos de investigación de mercado.

3.     Para que participe en promociones, concursos, certámenes u otras actividades de Lanix, así como para contactarle con tales fines.

4.     Para solicitarle que responda algunas encuestas de satisfacción respecto a nuestros productos y servicios.

5.     Para contactarle en relación con el resultado de las evaluaciones que haya realizado respecto de los productos y servicios de Lanix o algún otro tema.

6.     En general, para hacerle llegar información de Lanix, con fines publicitarios y de promoción.



En caso que sus Datos Personales pretendan ser utilizados para una finalidad distinta a las anteriores, Lanix le notificará por correo electrónico o por teléfono, a fin de obtener su consentimiento para el tratamiento de sus Datos Personales de acuerdo a las nuevas finalidades. De no recibir su consentimiento, para los casos en que es necesario, Lanix no utilizará sus Datos Personales.

En caso de que no desee que sus datos personales se utilicen para estos fines secundarios, nos lo puede notificar al siguiente correo: datospersonales@lanix.com, indicando su nombre.



¿Qué datos personales utilizaremos para estos fines?

El usuario al navegar en este sitio web podrá proporcionar datos personales de identificación y de contacto. Lanix por ningún motivo solicitará datos personales sensibles o que no estén relacionados con las finalidades mencionadas anteriormente.



¿Cómo puede acceder, rectificar o cancelar sus datos personales, u oponerse a su uso?

Usted tiene derecho a conocer qué datos personales tenemos de usted, para qué los utilizamos y las condiciones del uso que les damos (Acceso). Asimismo, es su derecho solicitar la corrección de su información personal en caso de que esté desactualizada, sea inexacta o incompleta (Rectificación); que la eliminemos de nuestros registros o bases de datos cuando considere que la misma no está siendo utilizada adecuadamente (Cancelación); así como oponerse al uso de sus datos personales para fines específicos (Oposición). Estos derechos se conocen como derechos ARCO.

Podrá ejercer sus derechos ARCO solicitando el formulario de “derechos ARCO”, con el área encargada de datos personales en Lanix, al siguiente correo electrónico: datospersonales@lanix.com.





Usted puede revocar su consentimiento para el uso de sus datos personales.

Usted puede revocar el consentimiento que, en su caso, nos haya otorgado para el tratamiento de sus datos personales. Sin embargo, es importante que tenga en cuenta que no en todos los casos podremos atender su solicitud o concluir el uso de forma inmediata, ya que es posible que por alguna obligación legal requiramos seguir tratando sus datos personales. Asimismo, usted deberá considerar que para ciertos fines, la revocación de su consentimiento implicará que no le podamos seguir prestando el servicio que nos solicitó, o la conclusión de su relación con nosotros.

Para revocar su consentimiento deberá presentar su solicitud por medio del siguiente correo electrónico: datospersonales@lanix.com.

Para conocer el procedimiento y requisitos para la revocación del consentimiento, usted podrá llamar al siguiente número telefónico (662) 226 0381, o bien ponerse en contacto con nuestro Departamento de Privacidad.



¿Cómo puede limitar el uso o divulgación de su información personal?

Con objeto de que usted pueda limitar el uso y divulgación de su información personal y para obtener más información al respecto le ofrecemos los siguientes medios:

Correo electrónico: datospersonales@lanix.com

Teléfono: (662) 226 0381





El uso de tecnologías de rastreo en nuestro portal de internet.

Le informamos que en nuestra página de internet utilizamos cookies, web beacons u otras tecnologías, a través de las cuales es posible monitorear su comportamiento como usuario de internet, así como brindarle un mejor servicio y experiencia al navegar en nuestra página. Los datos personales que recabamos a través de estas tecnologías, los utilizaremos para los siguientes fines:

·         Asegurar un buen uso del portal

·         Mejorar la experiencia de usuario

·         Obtener estadísticas de navegación



Los datos personales que obtenemos de estas tecnologías de rastreo son los siguientes:



·         Identificadores, nombre de usuario y contraseñas de una sesión.

·         Región en la que se encuentra el usuario.

·         Búsquedas realizadas por un usuario.



Le recordamos que usted puede deshabilitar o ajustar el uso de cookies siguiendo los procedimientos del navegador de internet que utiliza. Para mayor información sobre el uso de estas tecnologías y cómo desactivarlas, le sugerimos consultar el siguiente sitio de Internet: http://es.wikihow.com/deshabilitar-las-cookies.





¿Cómo puede conocer los cambios en este aviso de privacidad?

El presente aviso de privacidad puede sufrir modificaciones, cambios o actualizaciones derivadas de nuevos requerimientos legales; de nuestras propias necesidades por los productos o servicios que ofrecemos; de nuestras prácticas de privacidad; de cambios en nuestro modelo de negocio, o por otras causas.

Nos comprometemos a mantenerlo informado sobre los cambios que pueda sufrir el presente aviso de privacidad, a través de nuestro portal (www.lanix.com).

El procedimiento a través del cual se llevarán a cabo las notificaciones sobre cambios o actualizaciones al presente aviso de privacidad es el siguiente:

Cada vez que Lanix decida aplicar cambios, actualizaciones o modificaciones al aviso de privacidad, éste nuevo aviso se publicará en nuestro portal y se colocará la fecha de la última versión. Le recomendamos visitar periódicamente esta página con la finalidad de informarse si ocurre algún cambio al presente.





*Fecha de última actualización: 15/06/2017</string>
</resources>
