<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <include
        android:id="@+id/layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/l_header"/>

    <TextView
        android:id="@+id/tv_instrucciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@id/layout_description"
        android:textColor="@color/lanix_gris_oscuro"
        android:textSize="14sp"
        android:text="@string/msg_registro"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/tv_instrucciones"
        android:weightSum="5">
        <android.support.v7.widget.CardView
            android:elevation="4dp"
            android:id="@+id/cv_entrada"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:text="@string/msg_hra_entrada"
                    android:textColor="@color/lanix_gris_oscuro" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end
"
                    android:text="@string/goto_icon"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:elevation="4dp"
            android:id="@+id/cv_salida_comer"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">x
                    <TextView
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="14sp"
                        android:text="@string/salida_a_comer"
                        android:textColor="@color/lanix_gris_oscuro" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end
"
                        android:text="@string/goto_icon"
                        android:textColor="@color/colorAccent"
                        android:textSize="24sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:elevation="4dp"
            android:id="@+id/cv_regreso_comer"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:text="@string/msg_regreso_comida"
                    android:textColor="@color/lanix_gris_oscuro" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end
"
                    android:text="@string/goto_icon"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:elevation="4dp"
            android:id="@+id/cv_salida"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:text="@string/hora_de_salida"
                    android:textColor="@color/lanix_gris_oscuro" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end
"
                    android:text="@string/goto_icon"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".HomeActivity" />
    </LinearLayout>
</RelativeLayout>
