<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <include
        android:id="@+id/layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/l_header"/>

    <TextView
        android:id="@+id/tv_instrucciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@id/layout_description"
        android:textColor="@color/lanix_gris_oscuro"
        android:textSize="14sp"
        android:text="@string/msg_registro"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/tv_instrucciones"
        android:weightSum="4">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:id="@+id/cv_entrada"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="25dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textSize="14sp"
                        android:text="@string/msg_hra_entrada"
                        android:textColor="@color/lanix_gris_oscuro"
                        android:layout_margin="25dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textSize="24sp"
                        android:text=">"
                        android:textColor="@color/colorAccent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="25dp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:id="@+id/cv_salida_comida"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="25dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textSize="14sp"
                        android:text="SALIDA A COMER"
                        android:textColor="@color/lanix_gris_oscuro"
                        android:layout_margin="25dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textSize="24sp"
                        android:text=">"
                        android:textColor="@color/colorAccent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="25dp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:id="@+id/cv_entrada_comida"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="25dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textSize="14sp"
                        android:text="@string/msg_regreso_comida"
                        android:textColor="@color/lanix_gris_oscuro"
                        android:layout_margin="25dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textSize="24sp"
                        android:text=">"
                        android:textColor="@color/colorAccent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="25dp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:id="@+id/cv_salida"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="25dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textSize="14sp"
                        android:text="HORA DE SALIDA"
                        android:textColor="@color/lanix_gris_oscuro"
                        android:layout_margin="25dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textSize="24sp"
                        android:text=">"
                        android:textColor="@color/colorAccent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="25dp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
